# Parallel-genetic-algorithm

./: CMakeLists.txt  README.txt  makefile  qap_ga.cpp
common/: CMakeLists.txt
data/: CMakeLists.txt
include/: CMakeLists.txt  individual.hpp  individual_parallel.hpp  matrix.hpp
serial/: individual.serial.hpp  matrix.serial.cpp  qap_ga.serial.cpp
src/: CMakeLists.txt  individual.cpp  individual.serial.cpp  matrix.cpp  qap_ga.cpp  qap_ga.serial.cpp  random.cpp
src_parallel/: CMakeLists.txt  generate_individual.cl  generation.cl  individual_parallel.cpp  matrix.cpp  qap_pga.cpp
src_parallel_old/: CMakeLists.txt  generate_individual.cl  qap_pga.cpp
src_serial/: CMakeLists.txt  individual.serial.cpp  qap_ga.serial.cpp
test/: CMakeLists.txt  generate_individual.cl  individual_parallel.cpp  matrix.cpp  qap_pga.cpp  test.cl
